--- a/newsite/rc1/wi.html
+++ b/newsite/rc1/wi.html
@@ -294,7 +294,7 @@ visibility: hidden;
 <body><div>
 <script type="text/javascript" >
 
-function docload () { document.getElementById('mov_wi_vimeo').setAttribute('src','http://player.vimeo.com/video/44408062?title=0&byline=0');document.getElementById('img_gagl').style.visibility = 'visible';document.getElementById('img_gagr').style.visibility = 'visible';document.getElementById('img_frame').style.visibility = 'visible';document.getElementById('img_xboxlol').style.visibility = 'visible';document.getElementById('img_facebook').style.visibility = 'visible';document.getElementById('img_twitter').style.visibility = 'visible';document.getElementById('img_pinterest').style.visibility = 'visible';document.getElementById('img_wi_caption_big').style.visibility = 'visible';; } 
+function docload () { document.getElementById('mov_wi_vimeo').style.zIndex='4';document.getElementById('mov_wi_vimeo').setAttribute('src','http://player.vimeo.com/video/44408062?title=0&byline=0');document.getElementById('img_gagl').style.visibility = 'visible';document.getElementById('img_gagr').style.visibility = 'visible';document.getElementById('img_frame').style.visibility = 'visible';document.getElementById('img_xboxlol').style.visibility = 'visible';document.getElementById('img_facebook').style.visibility = 'visible';document.getElementById('img_twitter').style.visibility = 'visible';document.getElementById('img_pinterest').style.visibility = 'visible';document.getElementById('img_wi_caption_big').style.visibility = 'visible';; } 
 
  window.onload=docload;
 </script>
@@ -361,6 +361,14 @@ function docload () { document.getElementById('mov_wi_vimeo').setAttribute('src'
 <a href="photos.html">
 <img id="dph" src="assets/margin_left/assets_deselected/d_photos.png" onmouseover="document.getElementById('dphline').style.visibility='visible';document.getElementById('dphline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dphline').style.visibility='hidden';" alt="TheStudio" />
 </a>
+<div style="visibility:hidden">
+	<img style="visibility:inherit" src="../assets/margin_bottom/assets_selected/s_animation.png" />
+	<img style="visibility:inherit" src="../assets/margin_bottom/assets_selected/s_etcetera.png" />
+	<img style="visibility:inherit" src="../assets/margin_bottom/assets_selected/s_interactive.png" />
+	<img style="visibility:inherit" src="../assets/margin_bottom/assets_selected/s_motiondesign.png" />
+	<img style="visibility:inherit" src="../assets/margin_bottom/assets_selected/s_previs.png" />
+</div>
+
 <div ><iframe id="mov_wi_vimeo" src="http://player.vimeo.com/video/44408062?title=0&byline=0" width="550" height="309" style="position:absolute;visibility:inherit;top:217px;left:391px;z-index:4;" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
 <a href=gerber.html >
 
