--- a/newsite/rc1/sneakpeek.html
+++ b/newsite/rc1/sneakpeek.html
@@ -331,6 +331,14 @@ function docload () { document.getElementById('img_sneakpeek2').style.visibility
 <a href="photos.html">
 <img id="dph" src="assets/margin_left/assets_deselected/d_photos.png" onmouseover="document.getElementById('dphline').style.visibility='visible';document.getElementById('dphline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dphline').style.visibility='hidden';" alt="TheStudio" />
 </a>
+<div style="visibility:hidden">
+	<img style="visibility:inherit" src="../assets/margin_bottom/assets_selected/s_animation.png" />
+	<img style="visibility:inherit" src="../assets/margin_bottom/assets_selected/s_etcetera.png" />
+	<img style="visibility:inherit" src="../assets/margin_bottom/assets_selected/s_interactive.png" />
+	<img style="visibility:inherit" src="../assets/margin_bottom/assets_selected/s_motiondesign.png" />
+	<img style="visibility:inherit" src="../assets/margin_bottom/assets_selected/s_previs.png" />
+</div>
+
 <a href=# >
 
 <img id="img_sneakpeek2" src="assets/pages/sneakpeek/sneakpeek_main.png" onmouseover="" onmouseout="" alt="TheStudio" >
